# agent-observatory

./: .gitignore  CLAUDE.md  LICENSE  README.md  justfile
frontend/: package.json  svelte.config.js  vite.config.ts
frontend/src/: app.css
frontend/src-tauri/: Cargo.toml  tauri.conf.json
frontend/src-tauri/src/: conversation.rs  discovery.rs  enrichment.rs  hooks.rs  lib.rs  scanner.rs
frontend/src/routes/: +layout.svelte  +page.svelte
